libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__expr-unterminated-call.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected an expression, got end of input at 1:34
	  1 | value x: object { value = object(
	    |                                  ^
	- parse error: missing required 'version' directive
