libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__include-minimal.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: "format!(\"{bp:#?}\")"

---
Blueprint {
    version: Some(
        Scalar {
            value: String(
                "2025-11-02",
            ),
            span: Some(
                Span {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Some(
                        Position {
                            line: 1,
                            column: 21,
                        },
                    ),
                },
            ),
        },
    ),
    transform: [],
    variables: NamedMap {
        values: {},
        source_meta: {},
    },
    values: NamedMap {
        values: {},
        source_meta: {},
    },
    include: NamedMap {
        values: {
            "coreInfra": Include {
                path: StringOrSubstitutions {
                    values: [
                        String {
                            value: "core-infra.yaml",
                            span: Some(
                                Span {
                                    start: Position {
                                        line: 3,
                                        column: 19,
                                    },
                                    end: Some(
                                        Position {
                                            line: 3,
                                            column: 36,
                                        },
                                    ),
                                },
                            ),
                        },
                    ],
                    span: Some(
                        Span {
                            start: Position {
                                line: 3,
                                column: 19,
                            },
                            end: Some(
                                Position {
                                    line: 3,
                                    column: 36,
                                },
                            ),
                        },
                    ),
                },
                variables: None,
                metadata: None,
                description: None,
                span: Some(
                    Span {
                        start: Position {
                            line: 3,
                            column: 9,
                        },
                        end: Some(
                            Position {
                                line: 3,
                                column: 18,
                            },
                        ),
                    },
                ),
                fields_source_meta: {},
            },
        },
        source_meta: {
            "coreInfra": Span {
                start: Position {
                    line: 3,
                    column: 9,
                },
                end: Some(
                    Position {
                        line: 3,
                        column: 18,
                    },
                ),
            },
        },
    },
    resources: NamedMap {
        values: {},
        source_meta: {},
    },
    data_sources: NamedMap {
        values: {},
        source_meta: {},
    },
    exports: NamedMap {
        values: {},
        source_meta: {},
    },
    metadata: None,
    span: None,
}
