libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__include-missing-path.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected string, got '{' at 1:15
	  1 | include child {}
	    |               ^
	- parse error: missing required 'version' directive
