libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__include-unknown-field.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: unknown field "foo" in include declaration at 1:26
	  1 | include child "a.yaml" { foo = "bar" }
	    |                          ^
	- parse error: missing required 'version' directive
