libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__include-unterminated.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected '}', got end of input at 1:25
	  1 | include child "a.yaml" {
	    |                         ^
	- parse error: missing required 'version' directive
